src/test/ui/borrowck/borrowck-init-op-equal.stderr
error[E0381]: binding `v` isn't initialized
  --> $DIR/borrowck-init-op-equal.rs:3:5
   |
LL |     let v: isize;
   |         - variable declared here
LL |     v += 1;
   |     ^^^^^^ `v` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
